<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/bg_title_gradient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@drawable/bg_title_gradient">

        <ImageButton
            android:id="@+id/back_ib"
            android:layout_width="@dimen/title_bar_height"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/x26"
            android:paddingRight="@dimen/x26"
            android:paddingTop="@dimen/y28"
            android:paddingBottom="@dimen/y28"
            android:layout_marginLeft="@dimen/icon_left_margin"
            android:layout_centerVertical="true"
            android:src="@mipmap/left_arrow_white"
            android:background="?android:attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/tit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="安全求助"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/title_text_size" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/y88"
        android:background="@color/background">

        <RelativeLayout
            android:id="@+id/phone_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y140"
            android:layout_marginTop="@dimen/y40"
            android:background="@color/colorWhite">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="求助电话"
                android:layout_marginLeft="@dimen/x60"
                android:layout_centerVertical="true"
                android:textColor="@color/deeper_dark_color"
                android:textSize="@dimen/common_text_size"/>

            <EditText
                android:id="@+id/phone_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/common_left_margin"
                android:layout_centerVertical="true"
                android:textSize="@dimen/smaller_text_size"
                android:textColorHint="@color/colorCenterName"
                android:background="@null"
                android:maxLength="11"
                android:inputType="phone"
                android:gravity="right"
                android:hint="@string/call_number"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/divider"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/x60"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/notice_name_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y140"
            android:layout_below="@+id/phone_rl"
            android:background="@color/colorWhite">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="求助人姓名"
                android:layout_marginLeft="@dimen/x60"
                android:layout_centerVertical="true"
                android:textColor="@color/deeper_dark_color"
                android:textSize="@dimen/common_text_size"/>

            <EditText
                android:id="@+id/notice_name_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/common_left_margin"
                android:layout_centerVertical="true"
                android:textSize="@dimen/smaller_text_size"
                android:textColorHint="@color/colorCenterName"
                android:background="@null"
                android:inputType="text"
                android:maxLength="4"
                android:gravity="right"
                android:hint="@string/help_name"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/divider"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/x60"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/help_name_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y140"
            android:layout_below="@+id/notice_name_rl"
            android:background="@color/colorWhite">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="本人姓名"
                android:layout_marginLeft="@dimen/x60"
                android:layout_centerVertical="true"
                android:textColor="@color/deeper_dark_color"
                android:textSize="@dimen/common_text_size"/>

            <EditText
                android:id="@+id/help_name_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/common_left_margin"
                android:layout_centerVertical="true"
                android:textSize="@dimen/smaller_text_size"
                android:textColorHint="@color/colorCenterName"
                android:background="@null"
                android:inputType="text"
                android:maxLength="4"
                android:gravity="right"
                android:hint="@string/called_name"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/divider"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/help_name_rl"
            android:layout_marginLeft="@dimen/x60"
            android:layout_marginTop="@dimen/y55"
            android:text="备注："
            android:textSize="@dimen/smaller_text_size"
            android:textColor="@color/colorCenterName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/help_name_rl"
            android:layout_marginTop="@dimen/y55"
            android:textSize="@dimen/smaller_text_size"
            android:lineSpacingExtra="@dimen/x10"
            android:layout_marginRight="@dimen/x67"
            android:textColor="@color/colorCenterName"
            android:layout_toRightOf="@+id/notice"
            android:text="@string/security_info"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y140"
            android:background="@color/colorWhite"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/closeTv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="关闭"
                android:textColor="@color/deeper_dark_color"
                android:textSize="@dimen/common_text_size"
                android:gravity="center"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/divider"
                android:layout_marginTop="@dimen/y20"
                android:layout_marginBottom="@dimen/y20"/>

            <TextView
                android:id="@+id/openTv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="预览并开启"
                android:textColor="@color/title_gradient_right"
                android:textSize="@dimen/common_text_size"
                android:gravity="center"/>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:id="@+id/bgV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#a1000000"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/guideIv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/x85"
        android:paddingEnd="@dimen/x85"
        android:src="@mipmap/security_guide"
        android:visibility="gone"/>
    
    <View
        android:id="@+id/guideEnsureV"
        android:layout_width="@dimen/x200"
        android:layout_height="@dimen/y100"
        android:layout_marginStart="@dimen/x291"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/y239"
        android:visibility="gone"/>

</RelativeLayout>